--- a/package.json
+++ b/package.json
@@ -8,10 +8,17 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
+    "ethereumjs-tx": "^1.3.7",
     "express": "^4.16.4",
     "express-enrouten": "^1.3.0",
+    "fs-extra": "^7.0.0",
+    "geo-distance": "^0.2.0",
     "magnet-uri": "^5.2.4",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "solc": "^0.4.25",
+    "truffle": "^4.1.14",
+    "truffle-hdwallet-provider": "0.0.6",
+    "web3": "^1.0.0-beta.34"
   },
   "scripts": {
     "start": "nodemon ./bin/www"
